_archive/content-services/4.2/glossary/glossary_i.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: Glossary
option: glossary
---

# I

Glossary terms starting with the letter I.

[A](glossary_a.md) \| [B](glossary_b.md) \| [C](glossary_c.md) \| [D](glossary_d.md) \| [E](glossary_e.md) \| [F](glossary_f.md) \| [G](glossary_g.md) \| [H](glossary_h.md) \| [I](glossary_i.md) \| [J](glossary_j.md) \| [K](glossary_k.md) \| [L](glossary_l.md) \| [M](glossary_m.md) \| [N](glossary_n.md) \| [O](glossary_o.md) \| [P](glossary_p.md) \| [Q](glossary_q.md) \| [R](glossary_r.md) \| [S](glossary_s.md) \| [T](glossary_t.md) \| [U](glossary_u.md) \| [V](glossary_v.md) \| [W](glossary_w.md) \| [X](glossary_x.md) \| [Y](glossary_y.md) \| [Z](glossary_z.md)

-   **i18n**

    Internationalization is abbreviated to the numeronym i18n or I18N, where 18 stands for the number of letters between the first i and last n. I18n is the means of changing software to meet international requirements in terms of language, regional differences and requirements for other markets.

-   **IDE**

    See Integrated Development Environment.

-   **ImageMagick**

    ImageMagick is a software suite to create, edit, and compose bitmap images. It can read, convert and write images in a large variety of formats. Images can be cropped, colors can be changed, various effects can be applied, images can be rotated and combined, and text, lines, polygons, ellipses and Bézier curves can be added to images and stretched and rotated.

    Source: [http://www.imagemagick.org/script/index.php](http://www.imagemagick.org/script/index.php)

-   **IMAP**

    See Internet Message Access Protocol.

-   **ingest**

    A Digital Asset Management term. Ingestion is the process of supplying media to a Digital Asset Management system \(like Alfresco Media Management\) and adding metadata \(descriptive infiormation\) to it to allow for better retrieval when searching.

-   **Integrated Development Environment**

    An Integrated Development Environment or Interactive Development Environment \(IDE\) provides a framework for software development, delivered as an application. It provides a single interface with modules such as as a code editor, compiler, debugger, version control and a UI builder.

-   **Internet Message Access Protocol**

    Internet Message Access Protocol \(IMAP\) is a method of accessing and storing email on a mail server.

-   **IPTC**

    The IPTC \(International Press Telecommunications Council\) is the global standards body for news media.

-   **IPTC standard**

    The IPTC developed core and extended unformational metadata standards that define a large number of fields to describe images. Alfresco Media Management fully supports this standard and exposes the metadata in Alfresco Share.


